Add Paper 1.16.5 compatibility